<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="enter">Enter Something</string>
    <string name="show">Display what the user enters</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="display">Display</string>
    <string name="Hdisplay">Display</string>
    <string name="disabled">disable</string>
    <string name="enabled">enabled</string>
</resources>